<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_text">Welcome to the Flower Power shoe store inventory. This app was built to help employees to keep track of the stock we currently have. This will help us provide  more efficient service to our customers. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_text">To use this app correctly, click the button below to take you to the list of shoes in stock.</string>
    <string name="shoe_list">Shoe List</string>
    <string name="logout_menu">Logout</string>
    <string name="shoe_detail">Shoe detail</string>
    <string name="shoe_name">Shoe name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="shoe_description">Shoe description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>


</resources>
